--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body { font-family: 'Montserrat', sans-serif; text-align: center; background: linear-gradient(to top right, #f2f2f2, #ccccff); color: #333; height: 100vh; display: flex; align-items: center; justify-content: center; }
-.container { width: 90%; max-width: 800px; background: white; padding: 3rem; margin-top: 20px; border-radius: 15px; box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
-#newHaikuBtn, #prevHaikuBtn { margin-top: 30px; padding: 15px 30px; font-size: 20px; color: #fff; background-color: #0066cc; border: none; border-radius: 8px; cursor: pointer; }
-#newHaikuBtn:hover, #prevHaikuBtn:hover { background-color: #0052cc; }
-#haikuContainer { background-color: #e6e6ff; padding: 30px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0,0,0,0.1); }
-#haiku { font-family: 'Open Sans', serif; font-size: 26px; line-height: 1.6; color: #444; transition: opacity 0.6s ease-in-out; }
+.container { width: 90%; max-width: 800px; background: white; padding: 3rem; box-shadow: 0 10px 20px rgba(0,0,0,0.3); border-radius: 15px; }
+#newHaikuBtn, #prevHaikuBtn { margin-top: 30px; padding: 15px 30px; font-size: 20px; color: #fff; background-color: #009688; border: none; border-radius: 8px; cursor: pointer; }
+#newHaikuBtn:hover, #prevHaikuBtn:hover { background-color: #00796B; }
+#haikuContainer { background-color: #e6e6ff; padding: 30px; border-radius: 12px; }
+#haiku { font-family: 'Open Sans', serif; font-size: 26px; line-height: 1.6; color: #444; transition: opacity 0.6s ease-in-out; text-align: justify; }
+@media (max-width: 600px) { .container { width: 95%; padding: 2rem; } #newHaikuBtn, #prevHaikuBtn { font-size: 18px; padding: 10px 24px; }}
