--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-body { font-family: 'Montserrat', sans-serif; text-align: center; background: linear-gradient(to bottom, #fafafa, #eaeaea); color: #233; height: 100vh; display: flex; align-items: center; justify-content: center; }
-.container { width: 90%; max-width: 1000px; background: white; padding: 4rem; box-shadow: 0 15px 25px rgba(0,0,0,0.1); border-radius: 25px; }
-#newHaikuBtn, #prevHaikuBtn { margin-top: 40px; padding: 20px 40px; font-size: 22px; color: #fff; background-color: #007bb6; border: none; border-radius: 15px; cursor: pointer; transition: background-color 0.3s; }
+body { font-family: 'Montserrat', sans-serif; text-align: center; background: linear-gradient(to bottom, #f2f6ff, #d9e4ff); color: #233; height: 100vh; display: flex; align-items: center; justify-content: center; }
+.container { width: 90%; max-width: 1000px; background: white; padding: 30px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border-radius: 20px; }
+#newHaikuBtn, #prevHaikuBtn { margin-top: 20px; padding: 15px 35px; font-size: 18px; color: #333; background-color: #007bb6; border: none; border-radius: 12px; cursor: pointer; transition: background-color 0.3s; outline: none; }
 #newHaikuBtn:hover, #prevHaikuBtn:hover { background-color: #005f87; }
-#haikuContainer { background-color: #f0f0ff; padding: 50px; border-radius: 20px; }
-#haiku { font-family: 'Open Sans', serif; font-size: 30px; line-height: 1.9; color: #444; opacity: 0; transition: opacity 0.5s ease-in-out; text-align: justify; }
-@media (max-width: 600px) { .container { width: 98%; padding: 2.5rem; } #newHaikuBtn, #prevHaikuBtn { font-size: 20px; padding: 15px 28px; }}
+#haikuContainer { background-color: #ffffff; padding: 40px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
+#haiku { font-size: 24px; line-height: 1.6; color: #444; opacity: 1; transition: opacity 0.5s ease; text-align: center; }
+@media (max-width: 600px) { .container { width: 98%; padding: 25px; } #newHaikuBtn, #prevHaikuBtn { font-size: 16px; padding: 10px 24px; }}
