--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ html[data-theme='morning'] { filter: saturate(1.2); }
 p { font-size: 18px; margin-bottom: 20px; }
 button { border: 2px solid transparent; font-weight: bold; }
 button:hover { border-color: #1abc9c; color: #fff; }
-#haiku { text-shadow: 1px 1px #ffd; }
+#haiku { text-shadow: 1px 1px #ffd; padding-top: 20px; padding-bottom: 20px; }
 .container { background-color: rgba(248, 249, 250, 0.8); }
 #haikuContainer:before { content: ''; display: block; margin-bottom: 10px; height: 3px; background: linear-gradient(to right, #70e1f5, #ffd194); }
 /* Additional Style Enhancements */
